--- a/wordpress-deployment.yaml
+++ b/wordpress-deployment.yaml
@@ -16,19 +16,6 @@ spec:
     app: wordpress
     tier: frontend
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: wp-pv-claim
-  labels:
-    app: wordpress
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 20Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -68,9 +55,9 @@ spec:
         - containerPort: 80
           name: wordpress
         volumeMounts:
-        - name: wordpress-persistent-storage
+        - name: task-pv-storage
           mountPath: /var/www/html
       volumes:
-      - name: wordpress-persistent-storage
+      - name: task-pv-storage
         persistentVolumeClaim:
-          claimName: wp-pv-claim
+          claimName: task-pv-claim
