--- a/wordpress-deployment.yaml
+++ b/wordpress-deployment.yaml
@@ -20,6 +20,7 @@ metadata:
     app: wordpress
     owner: maxkoleda
 spec:
+  storageClassName: wp
   accessModes:
     - ReadWriteOnce
   resources:
