--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,7 +1,8 @@
 secretGenerator:
-- name: root-pass
+- name: mysql-pass
   literals:
   - password=Password123
 resources:
+  - pv-volume-wp-mysql.yaml
   - mysql-deployment.yaml
   - wordpress-deployment.yaml
